--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 ---
-layout: page
-title: Karte
-permalink: /map/
+# layout: page
+# title: Karte
+# permalink: /map/
 ---
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
     <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>    
