Aktualisiert durch coversync.bat

--- a/src/biblino-embedded.html
+++ b/src/biblino-embedded.html
@@ -3,6 +3,16 @@ Allgemeine Informationen zur Bücherei finden Sie auf unserer Homepage: <a href=
 
 <h3>In Kategorien stöbern</h3>
 
+<h4>Besonders beliebt</h4>
+	<a href="https://meine-buecherei.de/top100-sl/">&rarr; Top 100 - Belletristik (Erwachsene und Jugendliche)</a>
+	<br>
+	<a href="https://meine-buecherei.de/top100-sach/">&rarr; Top 100 - Sachliteratur</a>
+	<br>
+	<a href="https://meine-buecherei.de/top100-kinder/">&rarr; Top 100 - Kinderbücher</a>
+	<br>	
+	<a href="https://meine-buecherei.de/top100-cd/">&rarr; Top 100 - CDs</a>
+	<br>	
+	
 <h4>Nach Medienart</h4>
 
       <a href="/index.php?medienart=1&action=1&new_query=1">&rarr;  Bücher</a> 
