Links auf Antolin-Lesealtersuchen

--- a/src/biblino-embedded.html
+++ b/src/biblino-embedded.html
@@ -15,10 +15,20 @@ Allgemeine Informationen zur Bücherei finden Sie auf unserer Homepage: <a href=
 	
 <h4>Nach Medienart</h4>
 
-      <a href="/index.php?medienart=1&action=1&new_query=1">&rarr;  Bücher</a> 
-      <a href="/index.php?medienart=17&action=1&new_query=1">&rarr;  DVDs</a>
+      <a href="/index.php?medienart=1&action=1&new_query=1">&rarr;  Bücher</a>,
+      <a href="/index.php?medienart=17&action=1&new_query=1">&rarr;  DVDs</a>,
       <a href="/index.php?medienart=5&action=1&new_query=1">&rarr;  CDs</a>
 
+<h4>Bücher im Antolin-Programm zur Leseförderung (s. <a href="https://www.antolin.de" target="_blank">www.antolin.de</a>)</h4>
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+1&searchmode=1&action=1&new_query=1">&rarr;  1. Klasse</a>,
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+2&searchmode=1&action=1&new_query=1">&rarr;  2. Klasse</a>,
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+3&searchmode=1&action=1&new_query=1">&rarr;  3. Klasse</a>,
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+4&searchmode=1&action=1&new_query=1">&rarr;  4. Klasse</a>,
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+5&searchmode=1&action=1&new_query=1">&rarr;  5. Klasse</a>,
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+6&searchmode=1&action=1&new_query=1">&rarr;  6. Klasse</a>,
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+ab+7&searchmode=1&action=1&new_query=1">&rarr;  ab 7. Klasse</a>,
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+ab+9&searchmode=1&action=1&new_query=1">&rarr;  ab 9. Klasse</a>
+  
 <h4>Bücher nach Interessenkreisen</h4>
         <a href="/index.php?medienart=1&lesealter=1&searchmode=1&action=1&new_query=1">&rarr;  Für die Kleinsten</a>
         <br>
