Der Inhalt muss anscheinend auf 5000 Zeichen verkürzt werden

--- a/src/biblino-embedded.html
+++ b/src/biblino-embedded.html
@@ -11,40 +11,22 @@ Allgemeine Informationen zur Bücherei finden Sie auf unserer Homepage: <a href=
 	<a href="https://meine-buecherei.de/top100-kinder/">&rarr; Top 100 - Kinderbücher</a>
 	<br>	
 	<a href="https://meine-buecherei.de/top100-cd/">&rarr; Top 100 - CDs</a>
-	<br>	
-	
+	<br>		
 <h4>Nach Medienart</h4>
-
       <a href="/index.php?medienart=1&action=1&new_query=1">&rarr;  Bücher</a>,
       <a href="/index.php?medienart=17&action=1&new_query=1">&rarr;  DVDs</a>,
       <a href="/index.php?medienart=5&action=1&new_query=1">&rarr;  CDs</a>
-
 <h4>Bücher im Antolin-Programm zur Leseförderung (s. <a href="https://www.antolin.de" target="_blank">www.antolin.de</a>)</h4>
-      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+1&searchmode=1&action=1&new_query=1">&rarr;  1. Klasse</a>,
-      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+2&searchmode=1&action=1&new_query=1">&rarr;  2. Klasse</a>,
-      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+3&searchmode=1&action=1&new_query=1">&rarr;  3. Klasse</a>,
-      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+4&searchmode=1&action=1&new_query=1">&rarr;  4. Klasse</a>,
-      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+5&searchmode=1&action=1&new_query=1">&rarr;  5. Klasse</a>,
-      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+6&searchmode=1&action=1&new_query=1">&rarr;  6. Klasse</a>,
-      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+ab+7&searchmode=1&action=1&new_query=1">&rarr;  ab 7. Klasse</a>,
-      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+ab+9&searchmode=1&action=1&new_query=1">&rarr;  ab 9. Klasse</a>
-  
+      <a href="/index.php?medienart=1&schlagworte=ANTOLIN+1&searchmode=1&action=1&new_query=1">&rarr;  1. Klasse</a>,<a href="/index.php?medienart=1&schlagworte=ANTOLIN+2&searchmode=1&action=1&new_query=1">&rarr;  2. Klasse</a>,<a href="/index.php?medienart=1&schlagworte=ANTOLIN+3&searchmode=1&action=1&new_query=1">&rarr;  3. Klasse</a>,<a href="/index.php?medienart=1&schlagworte=ANTOLIN+4&searchmode=1&action=1&new_query=1">&rarr;  4. Klasse</a>,<a href="/index.php?medienart=1&schlagworte=ANTOLIN+5&searchmode=1&action=1&new_query=1">&rarr;  5. Klasse</a>,<a href="/index.php?medienart=1&schlagworte=ANTOLIN+6&searchmode=1&action=1&new_query=1">&rarr;  6. Klasse</a>,<a href="/index.php?medienart=1&schlagworte=ANTOLIN+ab+7&searchmode=1&action=1&new_query=1">&rarr;  ab 7. Klasse</a>,<a href="/index.php?medienart=1&schlagworte=ANTOLIN+ab+9&searchmode=1&action=1&new_query=1">&rarr;  ab 9. Klasse</a>
 <h4>Bücher nach Interessenkreisen</h4>
         <a href="/index.php?medienart=1&lesealter=1&searchmode=1&action=1&new_query=1">&rarr;  Für die Kleinsten</a>
-        <br>
-        <a href="/index.php?medienart=1&sachgruppe=KK&searchmode=1&action=1&new_query=1">&rarr; Kinderbücher (Bilderbücher, 0-6 Jahre)</a>
-        <br>
-        <a href="/index.php?medienart=1&sachgruppe=K+Vorlesen&searchmode=1&action=1&new_query=1">&rarr; Kinderbücher (Vorlesegeschichten)</a>
-        <br>
-        <a href="/index.php?medienart=1&sachgruppe=KE&searchmode=1&action=1&new_query=1">&rarr; Kinderbücher (Erstleser, 6-8 Jahre)</a>
-        <br>
-        <a href="/index.php?medienart=1&sachgruppe=K&searchmode=1&action=1&new_query=1">&rarr; Kinderbücher (9-12 Jahre)</a>
-        <br>
-        <a href="/index.php?medienart=1&sachgruppe=K+Sach&searchmode=1&action=1&new_query=1">&rarr; Kindersachbücher</a>
-        <br>
-        <a href="/index.php?medienart=1&sachgruppe=J&searchmode=1&action=1&new_query=1">&rarr; Jugendbücher</a>
-        <br>
-        <a href="/index.php?medienart=1&statistikgruppe=12&searchmode=1&action=1&new_query=1">&rarr; Sachbücher</a>
+        <br><a href="/index.php?medienart=1&sachgruppe=KK&searchmode=1&action=1&new_query=1">&rarr; Kinderbücher (Bilderbücher, 0-6 Jahre)</a>
+        <br><a href="/index.php?medienart=1&sachgruppe=K+Vorlesen&searchmode=1&action=1&new_query=1">&rarr; Kinderbücher (Vorlesegeschichten)</a>
+        <br><a href="/index.php?medienart=1&sachgruppe=KE&searchmode=1&action=1&new_query=1">&rarr; Kinderbücher (Erstleser, 6-8 Jahre)</a>
+        <br><a href="/index.php?medienart=1&sachgruppe=K&searchmode=1&action=1&new_query=1">&rarr; Kinderbücher (9-12 Jahre)</a>
+        <br><a href="/index.php?medienart=1&sachgruppe=K+Sach&searchmode=1&action=1&new_query=1">&rarr; Kindersachbücher</a>
+        <br><a href="/index.php?medienart=1&sachgruppe=J&searchmode=1&action=1&new_query=1">&rarr; Jugendbücher</a>
+        <br><a href="/index.php?medienart=1&statistikgruppe=12&searchmode=1&action=1&new_query=1">&rarr; Sachbücher</a>
          (<a href="/index.php?medienart=1&sachgruppe=Bi&searchmode=1&action=1&new_query=1">&rarr; Biographien</a>, 
           <a href="/index.php?medienart=1&sachgruppe=Fa&searchmode=1&action=1&new_query=1">&rarr; Familie</a>, 
           <a href="/index.php?medienart=1&sachgruppe=Frei&searchmode=1&action=1&new_query=1">&rarr; Freizeit</a>, 
@@ -55,16 +37,11 @@ Allgemeine Informationen zur Bücherei finden Sie auf unserer Homepage: <a href=
           <a href="/index.php?medienart=1&sachgruppe=NT&searchmode=1&action=1&new_query=1">&rarr; Natur + Technik</a>,
           <a href="/index.php?medienart=1&sachgruppe=So&searchmode=1&action=1&new_query=1">&rarr; Politik/Wirtschaft,</a>
           <a href="/index.php?medienart=1&sachgruppe=Re&searchmode=1&action=1&new_query=1">&rarr; Religion</a>)
-        <br>
-          <a href="/index.php?medienart=1&statistikgruppe=13&searchmode=1&action=1&new_query=1">&rarr; Belletristik</a>
+        <br><a href="/index.php?medienart=1&statistikgruppe=13&searchmode=1&action=1&new_query=1">&rarr; Belletristik</a>
           (<a href="/index.php?medienart=1&sachgruppe=SL&searchmode=1&action=1&new_query=1">&rarr; Allgemein</a>, 
            <a href="/index.php?medienart=1&sachgruppe=SL+Hist&searchmode=1&action=1&new_query=1">&rarr; Historisches</a>,
            <a href="/index.php?medienart=1&sachgruppe=SL+Krimi&searchmode=1&action=1&new_query=1">&rarr; Krimi/Thriller</a>,
            <a href="/index.php?medienart=1&sachgruppe=SL+SciFi&searchmode=1&action=1&new_query=1">&rarr; Fantasy/SF</a>)
-       <br>   
-        <a href="/index.php?medienart=1&sachgruppe=He&searchmode=1&action=1&new_query=1">&rarr; Bayern, Regionales</a>
-
-
+       <br><a href="/index.php?medienart=1&sachgruppe=He&searchmode=1&action=1&new_query=1">&rarr; Bayern, Regionales</a>
         <br>
-
 <h4>Neuanschaffungen</h4>
